--- a/StarterApp/StarterApp.html
+++ b/StarterApp/StarterApp.html
@@ -1,13 +1,14 @@
 <head>
-  <title>StarterApp</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>StarterApp</title>
+     <!-- Custom styles for this template -->
+    <link href="cover.css" rel="stylesheet">
 </head>
 
 <body>
-  {{> hello}}
+  {{> cover}}
 </body>
 
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
-</template>
+
