--- a/StarterApp/client/main.html
+++ b/StarterApp/client/main.html
@@ -2,13 +2,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>StarterApp</title>
-     <!-- Custom styles for this template -->
-    <link href="cover.css" rel="stylesheet">
+    <title>Le Jeu de la Vie</title>
 </head>
-
-<body>
-  {{> cover}}
-</body>
 
 
